[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/malgun_boot.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene/Main.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 2
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
total_max = 50

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FemaleInLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -292.0
margin_right = 191.0
margin_bottom = -195.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Female In: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaleOutLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 188.0
margin_right = 191.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Male In: 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorIn" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -792.0
margin_top = -436.0
margin_right = -296.0
margin_bottom = 436.0
color = Color( 0.133333, 1, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FemaleInButton" type="Button" parent="ColorIn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -412.0
margin_right = 224.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaleInButton" type="Button" parent="ColorIn"]
margin_left = 24.0
margin_top = 472.0
margin_right = 472.0
margin_bottom = 848.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOut" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 296.0
margin_top = -436.0
margin_right = 792.0
margin_bottom = 436.0
color = Color( 1, 0.0784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FemaleOutButton" type="Button" parent="ColorOut"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -412.0
margin_right = 224.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaleOutButton" type="Button" parent="ColorOut"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = 36.0
margin_right = 224.0
margin_bottom = 412.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalInLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -52.0
margin_right = 160.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total In: 5"
[connection signal="pressed" from="ColorIn/FemaleInButton" to="." method="_on_FemaleInButton_pressed"]
[connection signal="pressed" from="ColorIn/MaleInButton" to="." method="_on_MaleInButton_pressed"]
[connection signal="pressed" from="ColorOut/FemaleOutButton" to="." method="_on_FemaleOutButton_pressed"]
[connection signal="pressed" from="ColorOut/MaleOutButton" to="." method="_on_MaleOutButton_pressed"]
